import "sitemap:2.0.0" from xailabs git